# the-truman-show

./: .gitignore  README.md  bot.py  bots.json  example_config.json  main.py  pyproject.toml
example_bots/: fasttyper.json
src/: gemeni_test.py  log.py  task.py
